--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN">
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test</title>
-    <script src="main.min.js"></script>
-</head>
-<body>
+    <head>
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="full-screen" content="yes"/>
+        <meta name="screen-orientation" content="landscape"/>
+        <meta charset="utf-8">
+        <title>Test</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
 
-</body>
+        <script src="main.min.js"></script>
+    </body>
 </html>
