Improve transition filter code

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,8 @@
             }
         </script>
         <script id="transitionShaderOut" type="shader">
-
+            // in = 0
+            // out = 1
             precision mediump float;
 
             varying vec2 vFilterCoord;
