--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
         <meta name="full-screen" content="yes"/>
         <meta name="screen-orientation" content="landscape"/>
         <meta charset="utf-8">
-        <title>Test</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, user-scalable=no, minimal-ui">
         <script id="transitionShaderIn" type="shader">
 
             precision mediump float;
@@ -79,7 +78,5 @@
         </script>
     </head>
     <body>
-
-        <script src="main.min.js"></script>
     </body>
 </html>
